--- a/Pipfile
+++ b/Pipfile
@@ -17,6 +17,7 @@ flake8-print = "*"
 invoke = "*"
 isort = "*"
 pytest = "*"
+pytest-clarity = "*"
 pytest-cov = "*"
 pytest-mock = "*"
 pytest-socket = "*"
